--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".History"
-    android:id="@+id/drawer_layout">
+    android:id="@+id/drawer_layout"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
