--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -49,9 +49,11 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/upcoming"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:focusedByDefault="true"
             android:drawableStart="@drawable/ic_baseline_arrow_upward_24"
             android:drawableTint="#000000"
             android:padding="@dimen/_12sdp"
